Revert "Revert "[ADS-3000]: [Java] Support nifi parallelism in NiFi ADB Conne…"