@@ -31,6 +31,7 @@ import org.apache.nifi.controller.ConfigurationContext;
 import org.apache.nifi.dbcp.DBCPService;
 import org.apache.nifi.gpfdist.metadata.Context;
 import org.apache.nifi.gpfdist.metadata.ContextManager;
+import org.apache.nifi.gpfdist.metadata.GpfidstLoadConfig;
 import org.apache.nifi.gpfdist.server.DefaultGpfdistServer;
 import org.apache.nifi.gpfdist.server.GpfdistServer;
 import org.apache.nifi.gpfdist.server.config.GpfdistServerConfig;
@@ -40,18 +41,19 @@ import org.apache.nifi.gpfdist.service.greengage.DefaultGreengageService;
 import org.apache.nifi.gpfdist.service.load.metadata.factory.CreateReadableExternalTableQueryFactory;
 import org.apache.nifi.gpfdist.service.load.metadata.factory.DefaulGpfdistLocationFactory;
 import org.apache.nifi.gpfdist.service.load.metadata.factory.DefaultGpfdistLoadMetadataFactory;
-import org.apache.nifi.gpfdist.service.load.metadata.factory.DefaultInsertDataQueryFactory;
+import org.apache.nifi.gpfdist.service.load.metadata.factory.DropExternalTableQueryFactoryImpl;
+import org.apache.nifi.gpfdist.service.load.metadata.factory.LoadInsertDataQueryFactory;
 import org.apache.nifi.gpfdist.service.load.process.GpfdistRecordProcessorFactory;
-import org.apache.nifi.gpfdist.service.load.process.GpfdistRecordSinkProvider;
 import org.apache.nifi.gpfdist.service.load.process.RecordProcessorFactory;
-import org.apache.nifi.gpfdist.service.load.query.LoadDataQueryExecutor;
 import org.apache.nifi.gpfdist.service.metadata.CsvFormatConfig;
 import org.apache.nifi.gpfdist.service.metadata.DefaultExternalTableFormatConfigFactory;
+import org.apache.nifi.gpfdist.service.query.CreateExternalTableQueryExecutor;
+import org.apache.nifi.gpfdist.service.query.DropExternalTableQueryExecutor;
+import org.apache.nifi.gpfdist.service.query.InsertDataQueryExecutor;
 import org.apache.nifi.gpfdist.service.unload.metadata.DefaultGpfdistUnloadMetadataFactory;
 import org.apache.nifi.gpfdist.service.unload.process.GpfdistInputDataProcessorFactory;
 import org.apache.nifi.gpfdist.service.unload.process.InputDataProcessorFactory;
 import org.apache.nifi.gpfdist.service.unload.query.CreateWritableExternalTableQueryFactory;
-import org.apache.nifi.gpfdist.service.unload.query.UnloadDataQueryExecutor;
 import org.apache.nifi.gpfdist.service.unload.query.UnloadInsertDataQueryFactory;
 import org.apache.nifi.logging.ComponentLog;
 import org.apache.nifi.processor.DataUnit;
@@ -59,8 +61,6 @@ import org.apache.nifi.processor.util.StandardValidators;
 
 import java.net.InetAddress;
 import java.net.UnknownHostException;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -68,15 +68,16 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
 
 import static org.apache.nifi.gpfdist.service.GpfdistProperties.DBCP_SERVICE;
+import static org.apache.nifi.gpfdist.service.GpfdistProperties.GPFDIST_PER_GREENGAGE_SEGMENT_STREAM_BUFFER_ENQUEUE_TIMEOUT;
+import static org.apache.nifi.gpfdist.service.GpfdistProperties.GPFDIST_PER_GREENGAGE_SEGMENT_STREAM_MAX_BUFFER_SIZE;
 import static org.apache.nifi.gpfdist.service.GpfdistProperties.GPFDIST_REQUEST_PROCESSOR_MAX_THREADS;
 import static org.apache.nifi.gpfdist.service.GpfdistProperties.GPFDIST_SERVER_MAX_THREADS;
 import static org.apache.nifi.gpfdist.service.GpfdistProperties.GPFDIST_SERVER_MIN_THREADS;
 import static org.apache.nifi.gpfdist.service.GpfdistProperties.GPFDIST_SERVER_THREAD_IDLE_TIMEOUT_MS;
 import static org.apache.nifi.gpfdist.service.GpfdistProperties.PORT;
-import static org.apache.nifi.gpfdist.service.GpfdistProperties.RECORD_PROCESSOR_MAX_THREADS;
-import static org.apache.nifi.gpfdist.service.GpfdistProperties.WRITE_BUFFER_SIZE;
 import static org.apache.nifi.gpfdist.service.util.ClusterNodeUtil.getNodesHostnames;
 
 @Stateful(description = "Store information about cluster nodes hostnames", scopes = {Scope.CLUSTER})
@@ -85,6 +86,7 @@ import static org.apache.nifi.gpfdist.service.util.ClusterNodeUtil.getNodesHostn
 public class StandartGpfdistService extends AbstractControllerService implements GpfdistService {
     private static final String KEY_HOSTS = "hosts";
     private static final int MAX_REGISTER_ATTEMPTS = 10;
+    private static final long LOAD_ASYNC_TIMEOUT_MS = 120_000;
     private static final List<PropertyDescriptor> PROPERTIES;
 
     static final PropertyDescriptor NODE_COUNT = new PropertyDescriptor.Builder()
@@ -96,26 +98,28 @@ public class StandartGpfdistService extends AbstractControllerService implements
             .build();
 
     static {
-        final List<PropertyDescriptor> props = new ArrayList<>();
-        props.add(PORT);
-        props.add(DBCP_SERVICE);
-        props.add(WRITE_BUFFER_SIZE);
-        props.add(RECORD_PROCESSOR_MAX_THREADS);
-        props.add(GPFDIST_REQUEST_PROCESSOR_MAX_THREADS);
-        props.add(GPFDIST_SERVER_MIN_THREADS);
-        props.add(GPFDIST_SERVER_MAX_THREADS);
-        props.add(GPFDIST_SERVER_THREAD_IDLE_TIMEOUT_MS);
-        props.add(NODE_COUNT);
-        PROPERTIES = Collections.unmodifiableList(props);
+        PROPERTIES = List.of(PORT,
+                DBCP_SERVICE,
+                GPFDIST_REQUEST_PROCESSOR_MAX_THREADS,
+                GPFDIST_SERVER_MIN_THREADS,
+                GPFDIST_SERVER_MAX_THREADS,
+                GPFDIST_SERVER_THREAD_IDLE_TIMEOUT_MS,
+                NODE_COUNT,
+                GPFDIST_PER_GREENGAGE_SEGMENT_STREAM_MAX_BUFFER_SIZE,
+                GPFDIST_PER_GREENGAGE_SEGMENT_STREAM_BUFFER_ENQUEUE_TIMEOUT);
     }
 
     private GpfdistServer server;
-    private RecordSinkProvider recordSinkProvider;
     private GreengageService greengageService;
-    private TransferDataQueryExecutor loadDataQueryExecutor;
-    private TransferDataQueryExecutor unloadDataQueryExecutor;
+    private TransferDataQueryExecutor createReadExternalTableQueryExecutor;
+    private TransferDataQueryExecutor createWriteExternalTableQueryExecutor;
+    private TransferDataQueryExecutor insertDataIntoTargetTableQueryExecutor;
+    private TransferDataQueryExecutor dropExternalTableQueryExecutor;
+    private TransferDataQueryExecutor insertDataFromTargetTableQueryExecutor;
     private GpfdistUnloadMetadataFactory gpfdistUnloadMetadataFactory;
+    private GpfdistLoadMetadataFactory gpfdistLoadMetadataFactory;
     private ContextManager<Context> readContextManager;
+    private ContextManager<Context> writeContextManager;
     private NodeIndexService nodeIndexService;
 
     @Override
@@ -131,23 +135,26 @@ public class StandartGpfdistService extends AbstractControllerService implements
                 logger.info("A Gpfdist server is already running. {}", server);
                 return;
             }
+            final String host = getLocalCanonicalHostname();
             final DBCPService dbcpService = context.getProperty(DBCP_SERVICE).asControllerService(DBCPService.class);
             int port = context.getProperty(PORT).evaluateAttributeExpressions().asInteger();
-            final String host = getLocalCanonicalHostname();
-            int writeBufferSize = context.getProperty(WRITE_BUFFER_SIZE).asDataSize(DataUnit.B).intValue();
             int minServerThreads = context.getProperty(GPFDIST_SERVER_MIN_THREADS).asInteger();
             int maxServerThreads = context.getProperty(GPFDIST_SERVER_MAX_THREADS).asInteger();
             int threadsIdleTimeout = context.getProperty(GPFDIST_SERVER_THREAD_IDLE_TIMEOUT_MS).asInteger();
-            int recordProcessorMaxThreads = context.getProperty(RECORD_PROCESSOR_MAX_THREADS).asInteger();
             int gpfdistRequestMaxThreads = context.getProperty(GPFDIST_REQUEST_PROCESSOR_MAX_THREADS).asInteger();
             int nodeCount = context.getProperty(NODE_COUNT).asInteger();
+            long gpfdistSegmentStreamBufferSize = context.getProperty(GPFDIST_PER_GREENGAGE_SEGMENT_STREAM_MAX_BUFFER_SIZE)
+                    .asDataSize(DataUnit.B)
+                    .longValue();
+            long gpfdistStreamBufferEnqueueTimeoutMs = context
+                    .getProperty(GPFDIST_PER_GREENGAGE_SEGMENT_STREAM_BUFFER_ENQUEUE_TIMEOUT)
+                    .asTimePeriod(TimeUnit.MILLISECONDS);
 
-            final ExecutorService recordProcessingExecutorService = Executors.newFixedThreadPool(recordProcessorMaxThreads);
             final ExecutorService queryExecutorService = Executors.newCachedThreadPool();
-            final ExecutorService requestExecutorService = Executors.newFixedThreadPool(gpfdistRequestMaxThreads);
+            final ExecutorService gpfdistRequestExecutorService = Executors.newFixedThreadPool(gpfdistRequestMaxThreads);
 
-            final ContextManager<Context> writeContextManager = new DefaultContextManager(logger);
             readContextManager = new DefaultContextManager(logger);
+            writeContextManager = new DefaultContextManager(logger);
             final CsvFormatConfig dataFormatConfig = new CsvFormatConfig();
             final RecordProcessorFactory recordProcessorFactory = new GpfdistRecordProcessorFactory(dataFormatConfig);
             final GpfdistServerConfig gpfdistServerConfig = new GpfdistServerConfig(port,
@@ -162,7 +169,10 @@ public class StandartGpfdistService extends AbstractControllerService implements
                     readContextManager,
                     inputDataProcessorFactory,
                     recordProcessorFactory,
-                    requestExecutorService,
+                    gpfdistRequestExecutorService,
+                    new GpfidstLoadConfig(LOAD_ASYNC_TIMEOUT_MS,
+                            gpfdistSegmentStreamBufferSize,
+                            gpfdistStreamBufferEnqueueTimeoutMs),
                     logger);
             server.start();
             greengageService = new DefaultGreengageService(dbcpService, logger);
@@ -173,26 +183,32 @@ public class StandartGpfdistService extends AbstractControllerService implements
                     gpfdistServerConfig.getIdleTimeoutMs(),
                     gpfdistServerConfig.isSslEnabled()));
             DefaultExternalTableFormatConfigFactory externalTableFormatConfigFactory = new DefaultExternalTableFormatConfigFactory(dataFormatConfig);
-            final DefaultGpfdistLoadMetadataFactory loadMetadataFactory =
-                    new DefaultGpfdistLoadMetadataFactory(gpfdistLocationFactory, externalTableFormatConfigFactory);
-            loadDataQueryExecutor = new LoadDataQueryExecutor(queryExecutorService,
+            createReadExternalTableQueryExecutor = new CreateExternalTableQueryExecutor(queryExecutorService,
                     dbcpService,
                     new CreateReadableExternalTableQueryFactory(),
-                    new DefaultInsertDataQueryFactory(),
                     logger);
-            unloadDataQueryExecutor = new UnloadDataQueryExecutor(queryExecutorService,
+            createWriteExternalTableQueryExecutor = new CreateExternalTableQueryExecutor(queryExecutorService,
                     dbcpService,
                     new CreateWritableExternalTableQueryFactory(),
+                    logger);
+            insertDataIntoTargetTableQueryExecutor = new InsertDataQueryExecutor(
+                    queryExecutorService,
+                    dbcpService,
+                    new LoadInsertDataQueryFactory(),
+                    logger);
+            dropExternalTableQueryExecutor = new DropExternalTableQueryExecutor(
+                    queryExecutorService,
+                    dbcpService,
+                    new DropExternalTableQueryFactoryImpl(),
+                    logger);
+            insertDataFromTargetTableQueryExecutor = new InsertDataQueryExecutor(queryExecutorService,
+                    dbcpService,
                     new UnloadInsertDataQueryFactory(readContextManager),
                     logger);
-            gpfdistUnloadMetadataFactory = new DefaultGpfdistUnloadMetadataFactory(
-                    gpfdistLocationFactory,
+            gpfdistUnloadMetadataFactory = new DefaultGpfdistUnloadMetadataFactory(gpfdistLocationFactory,
                     externalTableFormatConfigFactory);
-            recordSinkProvider = new GpfdistRecordSinkProvider(recordProcessingExecutorService,
-                    writeContextManager,
-                    loadMetadataFactory,
-                    writeBufferSize,
-                    logger);
+            gpfdistLoadMetadataFactory = new DefaultGpfdistLoadMetadataFactory(gpfdistLocationFactory,
+                    externalTableFormatConfigFactory);
             StateManager stateManager = getStateManager();
             nodeIndexService = new ClusterStateNodeIndexService(nodeCount, host, stateManager, getLogger());
             registerNode(stateManager, host);
@@ -233,7 +249,6 @@ public class StandartGpfdistService extends AbstractControllerService implements
                 + MAX_REGISTER_ATTEMPTS + " attempts");
     }
 
-
     @OnShutdown
     @OnDisabled
     public void cleanup() {
@@ -252,23 +267,32 @@ public class StandartGpfdistService extends AbstractControllerService implements
     }
 
     @Override
-    public RecordSinkProvider getRecordSinkProvider() {
-        return recordSinkProvider;
-    }
-
-    @Override
     public GreengageService getGreengageMetadataService() {
         return greengageService;
     }
 
     @Override
-    public TransferDataQueryExecutor getLoadDataQueryExecutor() {
-        return loadDataQueryExecutor;
+    public TransferDataQueryExecutor getCreateReadExternalTableQueryExecutor() {
+        return createReadExternalTableQueryExecutor;
     }
 
     @Override
-    public TransferDataQueryExecutor getUnloadDataQueryExecutor() {
-        return unloadDataQueryExecutor;
+    public TransferDataQueryExecutor getCreateWriteExternalTableQueryExecutor() {
+        return createWriteExternalTableQueryExecutor;
+    }
+
+    public TransferDataQueryExecutor getInsertDataIntoTargetTableQueryExecutor() {
+        return insertDataIntoTargetTableQueryExecutor;
+    }
+
+    @Override
+    public TransferDataQueryExecutor getDropExternalTableQueryExecutor() {
+        return dropExternalTableQueryExecutor;
+    }
+
+    @Override
+    public TransferDataQueryExecutor getInsertDataFromTargetTableQueryExecutor() {
+        return insertDataFromTargetTableQueryExecutor;
     }
 
     @Override
@@ -277,8 +301,18 @@ public class StandartGpfdistService extends AbstractControllerService implements
     }
 
     @Override
+    public GpfdistLoadMetadataFactory getGpfdistLoadMetadataFactory() {
+        return gpfdistLoadMetadataFactory;
+    }
+
+    @Override
     public ContextManager<? extends Context> getReadContextManager() {
         return readContextManager;
+    }
+
+    @Override
+    public ContextManager<? extends Context> getWriteContextManager() {
+        return writeContextManager;
     }
 
     @Override
